Fixing Support side bar display again

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,48 +19,54 @@
 			
 			<div class="row">
 				<div class="pb-home-links">
-			<div class="pb-home-links-outer-panel">
-				<div class="hovereffect">
-					<img src="/assets/images/svg/icn_developers.svg" alt="Developers!">
-					<span class="pb-panel-title">Developers</span>
-					<div class="overlay">
-						<p>
-							<a href="/developers.html">Developers, dive right in and start coding!</a>
-						</p>
-	            	</div>
+			
+					<div class="pb-home-links-outer-panel">
+						<div class="hovereffect">
+							<img src="/assets/images/svg/icn_developers.svg" alt="Developers!">
+							<span class="pb-panel-title">Developers</span>
+							<div class="overlay">
+								<p>
+									<a href="/developers.html">Developers, dive right in and start coding!</a>
+								</p>
+			            	</div>
+						</div>
+					</div>
+					
+					<div class="pb-home-links-panel">
+						<div class="hovereffect">
+							<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
+							<span class="pb-panel-title">Get Started</span>
+							<div class="overlay">
+								<p>
+									<a href="/prebid/prebidjs.html">Let's Get Started!</a>
+								</p>
+				            </div>
+						</div>
+					</div>
+					
+					<div class="pb-home-links-outer-panel">
+						<div class="hovereffect">
+							<img src="/assets/images/svg/icn_adops.svg" alt="Ad Ops!">
+							<span class="pb-panel-title">Ad Ops</span>
+							<div class="overlay">
+								<p>
+									<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
+								</p>
+				            </div>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 			
-			<div class="pb-home-links-panel">
-				<div class="hovereffect">
-					<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
-					<span class="pb-panel-title">Get Started</span>
-					<div class="overlay">
-						<p>
-							<a href="/prebid/prebidjs.html">Let's Get Started!</a>
-						</p>
-		            </div>
+			<div class="row col-lg-12">
+				<div class="pb-messagebox">
+					{% assign arrMsgs = site.data.messages | where: "isActive",  "1" %}
+					{% assign thisMsg = arrMsgs[0] %}
+					{{thisMsg.text}}
 				</div>
 			</div>
-			
-			<div class="pb-home-links-outer-panel">
-				<div class="hovereffect">
-					<img src="/assets/images/svg/icn_adops.svg" alt="Ad Ops!">
-					<span class="pb-panel-title">Ad Ops</span>
-					<div class="overlay">
-						<p>
-							<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
-						</p>
-		            </div>
-				</div>
-			</div>
-			
-		</div>
-
-
-			</div>
-			
-			
+				
 			<div class="row">
 				<div class="pb_home_belowfold">
 					<div class="col-lg-12">
