--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -49,10 +49,21 @@
 		            					            				
 		            				<!--display subsection headers-->
 		            				{% if sectionItem.isSectionHeader == 0 and sectionItem.isHeader == 0 %}
-		            							            				
+		            					
+		            					<!-- check to see if we are on this page-->            				
 			            				<!-display subsection items with links-->
+										{% assign isPage = 0 %}
+				            				{% if sectionItem.link == page.url %}
+												{% assign isPage = 1 %}
+											{% endif %}
+			            				
+			            				
 			            				<a href="{{sectionItem.link}}" class="list-group-item list-group-item-action bg-dark text-white">
+				            				{% if isPage == 1 %}
+											<span class="menu-collapsed pb-nav-item" style="background-color:#cccccc;">{{sectionItem.title}}</span>
+											{% else %}
 											<span class="menu-collapsed pb-nav-item">{{sectionItem.title}}</span>
+											{% endif %}
 		                				</a>
 		                				
 		            				{% endif %}
