--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,31 +11,76 @@
 		
 		<div class="pb_homewrapper_content">
 			<div class="row">
-				<div class="col-lg-12">
+				<div class="col-lg-12 pb-top-text">
 					<h1>Header bidding unwrapped</h1>
 					<h2>Earn more from your advertising with Prebid, a transparent, open-source solution that increases advertiser demand while maintaining a fast and responsive user experience.</h2>
         		</div>
 			</div>
 			
+			<div class="pb-home-links">
+				<div class="pb-outer">
+					<div class="pb-inner">
+						
+						<div class="pb-home-links-outer-panel">
+							<div class="hovereffect">
+								<img src="/assets/images/svg/icn_developers_2.svg" alt="Developers!">
+								<span class="pb-panel-title">Developers</span>
+								<div class="overlay">
+									<p>
+										<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
+									</p>
+					            </div>
+							</div>
+						</div>
+						
+						<div class="pb-home-links-panel">
+							<div class="hovereffect">
+								<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
+								<div class="pb-center-title"><span>Get Started</span></div>
+								<div class="overlay">
+									<p>
+										<a href="/prebid/prebidjs.html">Let's Get Started!</a>
+									</p>
+					            </div>
+							</div>
+						</div>
+						
+						<div class="pb-home-links-outer-panel">
+							<div class="hovereffect">
+								<img src="/assets/images/svg/icn_adops_2.svg" alt="Ad Ops!">
+								<span class="pb-panel-title">Ad Ops</span>
+								<div class="overlay">
+									<p>
+										<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
+									</p>
+					            </div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div> 
+			
+<!--
 			<div class="row">
 				<div class="pb-home-links">
-			
+					
 					<div class="pb-home-links-outer-panel">
 						<div class="hovereffect">
-							<img src="/assets/images/svg/icn_developers.svg" alt="Developers!">
+							<img src="/assets/images/svg/icn_developers_2.svg" alt="Developers!">
 							<span class="pb-panel-title">Developers</span>
 							<div class="overlay">
 								<p>
-									<a href="/developers.html">Developers, dive right in and start coding!</a>
+									<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
 								</p>
-			            	</div>
+				            </div>
 						</div>
 					</div>
 					
 					<div class="pb-home-links-panel">
 						<div class="hovereffect">
 							<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
-							<span class="pb-panel-title">Get Started</span>
+							<span class="pb-center-title">Get Started</span>
 							<div class="overlay">
 								<p>
 									<a href="/prebid/prebidjs.html">Let's Get Started!</a>
@@ -46,7 +91,7 @@
 					
 					<div class="pb-home-links-outer-panel">
 						<div class="hovereffect">
-							<img src="/assets/images/svg/icn_adops.svg" alt="Ad Ops!">
+							<img src="/assets/images/svg/icn_adops_2.svg" alt="Ad Ops!">
 							<span class="pb-panel-title">Ad Ops</span>
 							<div class="overlay">
 								<p>
@@ -58,14 +103,7 @@
 					
 				</div>
 			</div>
-			
-			<div class="row col-lg-12">
-				<div class="pb-messagebox">
-					{% assign arrMsgs = site.data.messages | where: "isActive",  "1" %}
-					{% assign thisMsg = arrMsgs[0] %}
-					{{thisMsg.text}}
-				</div>
-			</div>
+-->
 				
 			<div class="row">
 				<div class="pb_home_belowfold">
@@ -204,3 +242,4 @@
   <script src="/assets/js/main.js"></script>
   
 
+  
