--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ button.list-group-item:focus {
 .pb_homewrapper_content { 
 	left: 0;
 	top: 0;
-	padding-top: 130px;
+	padding-top: 150px;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -355,15 +355,36 @@ button.list-group-item:focus {
 	margin-left: auto;
 }
 
+/**********Container****************/
+
+.pb-container { 
+	width:75%; 
+	margin-left:auto; 
+	margin-right:auto;
+}
+
+.pb-outer { 
+	width:100%; 
+	padding-top:25%; 
+	position:relative
+}
+
+.pb-inner { 
+	position: absolute; 
+	top: 0; 
+	left: 0; 
+	right: 0; 
+	bottom: 0; 
+}
+
 
 /*************Hover Effect***************/
 
 .pb-home-links { 
-	margin-left:auto;
-	margin-right: auto;
 	width: 75%;
-	height: 340px;
 	font-family: 'Verdana', sans-serif;
+	margin-left:auto; 
+	margin-right:auto;
 }
 
 .pb-home-links-panel { 
@@ -381,6 +402,7 @@ button.list-group-item:focus {
 	margin-right: auto;
 	width: 33%;
 	height: 100%;
+
 }
 
 .hovereffect {
@@ -463,17 +485,26 @@ button.list-group-item:focus {
 .hovereffect p { 
 	margin-top: 30px;
 	background-color: orange;
+	border-radius: 8px;
 }	
 
 .pb-home-links-panel p { 
 	margin-top:60px;
 }
 
-.pb-home-links span { 
+.pb-panel-title { 
 	display: inline-block;
 	font-size:35px;
 	color: #FFFFFF;
-	margin-top:-40px;
+	margin-top: 0px;
+}
+
+.pb-center-title { 
+	font-size:35px;
+	color: #FFFFFF;
+	margin-top: -20px;
+	
+
 }
 
 /***********Messages*******************/
@@ -502,7 +533,7 @@ button.list-group-item:focus {
 	margin-left: auto; 
 	margin-right: auto;
 	opacity:.80;
-	margin-top:200px;
+	margin-top:240px;
 	
 }
 	
@@ -600,7 +631,7 @@ button.list-group-item:focus {
 .pb_home_belowfold_carousel { 
 	border-top-left-radius: 12px;
 	border-top-right-radius: 12px;
-	padding-top: 60px;
+	padding-top: 20px;
 }
 
 .pb_home_belowfold_carousel h1 { 
@@ -609,7 +640,7 @@ button.list-group-item:focus {
 	font-size: 54px;
 	font-weight: 500;
 	color: #ffffff;
-	margin-bottom: 5px;
+	margin-bottom: 15px;
 	padding-bottom: 10px;
 	
 }
@@ -692,18 +723,18 @@ button.list-group-item:focus {
 	background-color: #47547c;
 	color: #ffffff;
 	font-family: 'Roboto', sans-serif;
-	font-size: 33px;
+	font-size: 32px;
 	margin:0;
-	padding-top:2px;
+	padding-top:7px;
 	border-top-left-radius: 12px;
 	border-top-right-radius: 12px;
 }
 
 .carousel-inner h4 {
 	padding-top: 25px;
-	font-family: 'Dosis', sans-serif;
+	font-family: 'Lato', sans-serif;
 	color: #333333;
-	font-size: 27px;
+	font-size: 22px;
 	text-align:center;
 	font-weight: 100;
 	padding-left: 20px;
@@ -1408,20 +1439,14 @@ button.list-group-item:focus {
 		margin-top: 5px;
 	}
 	
-	.header-links { 
+	.pb-home-links { 
 		margin-top: 10px;
 	}
 	
-	.header-links-item img { 
+	.pb-home-links img { 
 		width: 40%;
 		height: 40%;
 	
-	}
-
-	.header-links-item img.large { 
-		width: 50%;
-		height: 50%;
-		margin-top: -20px;
 	}
 	
 	.header-links-item p { 
@@ -1430,6 +1455,7 @@ button.list-group-item:focus {
 		margin-top: -10px;	
 	}
 	
+		
 	.pb_benefits {
 		margin-top: -30px;
 		height: 330px;
@@ -1954,25 +1980,45 @@ div.pl-doc-entry{
 
 }
 
-@media all and (min-width: 50px)   {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.2em;  } }
-@media all and (min-width: 100px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.3em;  } }
-@media all and (min-width: 200px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.4em;  } }
-@media all and (min-width: 300px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.5em;  } }
-@media all and (min-width: 400px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.6em;  } }
-@media all and (min-width: 500px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.7em;  } }
-@media all and (min-width: 600px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.8em;  } }
-@media all and (min-width: 700px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:0.9em;  } }
-@media all and (min-width: 800px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.0em;  } }
-@media all and (min-width: 900px)  {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.1em;  } }
-@media all and (min-width: 1000px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.2em;  } }
-@media all and (min-width: 1100px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.3em;  } }
-@media all and (min-width: 1200px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.4em;  } }
-@media all and (min-width: 1300px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.5em;  } }
-@media all and (min-width: 1400px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.6em;  } }
-@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.7em;  } }
-@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.8em;  } }
-@media all and (min-width: 1600px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:1.9em;  } }
-@media all and (min-width: 1700px) {  .pb_benefits_content > span, .pb-home-links span  { font-size:2.0em;  } }
+@media all and (min-width: 50px)   {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3 { font-size:0.2em;  } }
+@media all and (min-width: 100px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.3em;  } }
+@media all and (min-width: 200px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.4em;  } }
+@media all and (min-width: 300px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.5em;  } }
+@media all and (min-width: 400px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.6em;  } }
+@media all and (min-width: 500px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.7em;  } }
+@media all and (min-width: 600px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.8em;  } }
+@media all and (min-width: 700px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.9em;  } }
+@media all and (min-width: 800px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.0em;  } }
+@media all and (min-width: 900px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.1em;  } }
+@media all and (min-width: 1000px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.2em;  } }
+@media all and (min-width: 1100px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.3em;  } }
+@media all and (min-width: 1200px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.4em;  } }
+@media all and (min-width: 1300px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.5em;  } }
+@media all and (min-width: 1400px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.6em;  } }
+@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.7em;  } }
+@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.8em;  } }
+@media all and (min-width: 1600px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.9em;  } }
+@media all and (min-width: 1700px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:2.0em;  } }
+
+@media all and (min-width: 50px)   {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:0.7em;  } }
+@media all and (min-width: 100px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:0.8em;  } }
+@media all and (min-width: 200px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:0.9em;  } }
+@media all and (min-width: 300px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.0em;  } }
+@media all and (min-width: 400px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.1em;  } }
+@media all and (min-width: 500px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.2em;  } }
+@media all and (min-width: 600px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.3em;  } }
+@media all and (min-width: 700px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.4em;  } }
+@media all and (min-width: 800px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.5em;  } }
+@media all and (min-width: 900px)  {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.6em;  } }
+@media all and (min-width: 1000px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.7em;  } }
+@media all and (min-width: 1100px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.8em;  } }
+@media all and (min-width: 1200px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:1.9em;  } }
+@media all and (min-width: 1300px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.0em;  } }
+@media all and (min-width: 1400px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.1em;  } }
+@media all and (min-width: 1500px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.2em;  } }
+@media all and (min-width: 1500px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.3em;  } }
+@media all and (min-width: 1600px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.4em;  } }
+@media all and (min-width: 1700px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.5em;  } }
 
 @media all and (min-width: 50px)   {  .pb-home-links  { height:160px;  } }
 @media all and (min-width: 100px)  {  .pb-home-links  { height:170px;  } }
