Fixing mobile nav

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,65 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top pb-mobile-nav">
+	
+	<div class="container-fluid">
+	  
+	  	<div class="navbar-header">
+	      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+			
+		  <a class="navbar-brand" href="/index.html"><img src="/assets/images/logos/prebid_final.png"></a>
+		  
+		  <button type="button" id="sidebarCollapse" class="btn btn-secondary pb_menu_btn">
+			<i class="fas fa-align-left"></i>
+            <span>Menu</span>
+		  </button>
+    	</div>
+		
+		<div id="navbar" class="navbar-collapse collapse">
+		    <ul class="nav navbar-nav navbar-right">
+			   
+		   {% assign arrSideBarSections = site.data.sidebar | where: "isSectionHeader",  "1" %}
+					
+			{% for sectionHeader in arrSideBarSections %}
+			
+				{% assign sectionIdx = forloop.index0 %}
+			
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle pb-mobile-dropdown" data-prebidclickid="{{item.sectionId}}" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+						{{ sectionHeader.sectionTitle }}
+		                <span class="caret" />
+					</a>
+					
+					<!--get subsections-->
+					{% assign arrSubSections = site.data.sidebar | where: "sbSecId", sectionIdx %}
+					
+					<ul class="dropdown-menu">
+						
+						{% for subSection in arrSubSections %}
+						
+							{% if subSection.isHeader == "1" %}
+							<li><p class="pb-mobile-dropdown-header">{{subSection.title}}</p></li>
+							{% else %}
+							<li><a href="{{subSection.link}}" class="pb-mobile-dropdown-item" data-prebidclickid="{{subSection.nbCollapseId}}">&nbsp;&nbsp;{{subSection.title}}</a></li>
+							{% endif %}
+						
+						{% endfor %}
+						
+					</ul>	
+				</li>
+			
+			{% endfor %}
+					
+			</ul>
+		</div>
+  	</div>
+  	<!--end container-->
+</nav>	
+
+<nav class="navbar navbar-default navbar-fixed-top pb-main-nav">
 	
 	<div class="container-fluid">
 	  
@@ -78,3 +139,4 @@
   	</div>
   	<!--end container-->
 </nav>	
+
