--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,7 +169,7 @@ hr {
 }
 
 .pb-mobile-nav { 
-	display: block;
+	display: none;
 }
 
 .pb-mobile-dropdown-header { 
@@ -1447,9 +1447,9 @@ button.list-group-item:focus {
 	.pb-main-nav { 
 		display:none;
 	}
-	
-	.pb-mobile-nav !important { 
-		dispaly: block;
+		
+	.pb-mobile-nav  { 
+		display: block;
 	}
 	
 	.pb_homewrapper_content { 
@@ -2007,24 +2007,24 @@ div.pl-doc-entry{
 
 }
 
-@media all and (min-width: 50px)   {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3 { font-size:0.2em;  } }
-@media all and (min-width: 100px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.3em;  } }
-@media all and (min-width: 200px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.4em;  } }
-@media all and (min-width: 300px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.5em;  } }
-@media all and (min-width: 400px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.6em;  } }
-@media all and (min-width: 500px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.7em;  } }
-@media all and (min-width: 600px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.8em;  } }
-@media all and (min-width: 700px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.9em;  } }
-@media all and (min-width: 800px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.0em;  } }
-@media all and (min-width: 900px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.1em;  } }
-@media all and (min-width: 1000px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.2em;  } }
-@media all and (min-width: 1100px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.3em;  } }
-@media all and (min-width: 1200px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.4em;  } }
-@media all and (min-width: 1300px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.5em;  } }
-@media all and (min-width: 1400px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.6em;  } }
-@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.7em;  } }
-@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.8em;  } }
-@media all and (min-width: 1600px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.9em;  } }
+@media all and (min-width: 50px)   {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3 { font-size:0.5em;  } }
+@media all and (min-width: 100px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.6em;  } }
+@media all and (min-width: 200px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.7em;  } }
+@media all and (min-width: 300px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.8em;  } }
+@media all and (min-width: 400px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.8em;  } }
+@media all and (min-width: 500px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:0.8em;  } }
+@media all and (min-width: 600px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.2em;  } }
+@media all and (min-width: 700px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.2em;  } }
+@media all and (min-width: 800px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.5em;  } }
+@media all and (min-width: 900px)  {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.5em;  } }
+@media all and (min-width: 1000px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.5em;  } }
+@media all and (min-width: 1100px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.5em;  } }
+@media all and (min-width: 1200px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:1.5em;  } }
+@media all and (min-width: 1300px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:2.0em;  } }
+@media all and (min-width: 1400px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:2.0em;  } }
+@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:2.0em;  } }
+@media all and (min-width: 1500px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:2.0em;  } }
+@media all and (min-width: 1600px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:2.0em;  } }
 @media all and (min-width: 1700px) {  .pb_benefits_content > span, .pb-panel-title, .pb-center-title, .pb_homewrapper_content h2, .pb_homewrapper_content h1, .pb_benefits_content > h3, .carousel-inner h4, .carousel-inner h3  { font-size:2.0em;  } }
 
 @media all and (min-width: 50px)   {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:0.7em;  } }
