--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,93 +17,40 @@
         		</div>
 			</div>
 			
-			<div class="pb-home-links">
-				<div class="pb-outer">
-					<div class="pb-inner">
-						
-						<div class="pb-home-links-outer-panel">
-							<div class="hovereffect">
-								<img src="/assets/images/svg/icn_developers_2.svg" alt="Developers!">
-								<span class="pb-panel-title">Developers</span>
-								<div class="overlay">
-									<p>
-										<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
-									</p>
-					            </div>
-							</div>
-						</div>
-						
-						<div class="pb-home-links-panel">
-							<div class="hovereffect">
-								<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
-								<div class="pb-center-title"><span>Get Started</span></div>
-								<div class="overlay">
-									<p>
-										<a href="/prebid/prebidjs.html">Let's Get Started!</a>
-									</p>
-					            </div>
-							</div>
-						</div>
-						
-						<div class="pb-home-links-outer-panel">
-							<div class="hovereffect">
-								<img src="/assets/images/svg/icn_adops_2.svg" alt="Ad Ops!">
-								<span class="pb-panel-title">Ad Ops</span>
-								<div class="overlay">
-									<p>
-										<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
-									</p>
-					            </div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div> 
-			
-<!--
 			<div class="row">
 				<div class="pb-home-links">
-					
-					<div class="pb-home-links-outer-panel">
-						<div class="hovereffect">
-							<img src="/assets/images/svg/icn_developers_2.svg" alt="Developers!">
-							<span class="pb-panel-title">Developers</span>
-							<div class="overlay">
-								<p>
-									<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
-								</p>
-				            </div>
+					<div class="pb-outer">
+						<div class="pb-inner">
+							<div class="pb-home-links-outer-panel">
+								<div class="pb-home-link-container">
+									<div class="pb-home-link-visible"><a href="/developers.html"><img src="/assets/images/svg/icn_developers_2.svg" class="pb_md-homelink" /></a></div>
+									<div class="pb-home-link-hidden"><a href="/developers.html"><img src="/assets/images/svg/icn_developers_2_on.svg" class="pb_md-homelink" /></a></div>
+								</div>
+								<p class="pb-panel-title">Developers</p>
+							</div>
+							
+							<!--<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">-->
+							<div class="pb-home-links-panel">
+								<div class="pb-home-link-container">
+									<div class="pb-home-link-visible"><a href="/prebid/prebidjs.html"><img src="/assets/images/svg/icn_getStarted.svg" class="pb_lg-homelink" /></a></div>
+									<div class="pb-home-link-hidden"><a href="/prebid/prebidjs.html"><img src="/assets/images/svg/icn_getStarted_on.svg" class="pb_lg-homelink" /></a></div>
+								</div>
+								<p class="pb-center-title"><span>Get Started</p>
+							</div>
+							
+							<div class="pb-home-links-outer-panel">
+								<div class="pb-home-link-container">
+									<div class="pb-home-link-visible"><a href="/adops/before-you-start.html"><img src="/assets/images/svg/icn_adops_2.svg" class="pb_md-homelink" /></a></div>
+									<div class="pb-home-link-hidden"><a href="/adops/before-you-start.html"><img src="/assets/images/svg/icn_adops_2_on.svg" class="pb_md-homelink" /></a></div>
+								</div>
+								<p class="pb-panel-title">Ad Ops</p>
+							</div>
+	
 						</div>
 					</div>
-					
-					<div class="pb-home-links-panel">
-						<div class="hovereffect">
-							<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
-							<span class="pb-center-title">Get Started</span>
-							<div class="overlay">
-								<p>
-									<a href="/prebid/prebidjs.html">Let's Get Started!</a>
-								</p>
-				            </div>
-						</div>
-					</div>
-					
-					<div class="pb-home-links-outer-panel">
-						<div class="hovereffect">
-							<img src="/assets/images/svg/icn_adops_2.svg" alt="Ad Ops!">
-							<span class="pb-panel-title">Ad Ops</span>
-							<div class="overlay">
-								<p>
-									<a href="/adops/before-you-start.html">Learn how Prebid integrates seamlessly with Ad Ops!</a>
-								</p>
-				            </div>
-						</div>
-					</div>
-					
-				</div>
+				</div> 
 			</div>
--->
+			
 				
 			<div class="row">
 				<div class="pb_home_belowfold">
