--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -2,161 +2,25 @@
 
 {% include nav.html %}
 
+
 <style>
 	
-	.pb-home-links { 
-		margin-left:auto;
-		margin-right: auto;
-		width: 75%;
-		height: 240px;
-	}
-	
-	.pb-home-links-panel { 
-		float:left;
-		margin-left:auto;
-		margin-right: auto;
-		width: 33%;
-		height: 300px;
-	}
-	
-	.pb-home-links-outer-panel { 
-		float:left;
+	.pb-homepage { 
 		margin-top:100px;
-		margin-left:auto;
-		margin-right: auto;
-		width: 33%;
-		height: 300px;
-	}
-	
-	.hovereffect {
-	  width: 100%;
-	  height: 100%;
-	  float: left;
-	  overflow: hidden;
-	  position: relative;
-	  text-align: center;
-	  cursor: default;
 	}
 
-	.hovereffect .overlay {
-	  width: 100%;
-	  height: 100%;
-	  position: absolute;
-	  overflow: hidden;
-	  top: 0;
-	  left: 0;
-	  padding: 50px 20px;
-	}
-	
-	.hovereffect img.pb-large-img {
-	  display: block;
-	  position: relative;
-	  max-width: none;
-	  margin-left:auto;
-	  margin-right:auto;
-	  margin-top:-20px;
-	  width: calc(60% + 20px);
-	  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	  transition: opacity 0.35s, transform 0.35s;
-	  -webkit-transform: translate3d(-10px,0,0);
-	  transform: translate3d(-10px,0,0);
-	  -webkit-backface-visibility: hidden;
-	  backface-visibility: hidden;
-	}
-
-	
-	.hovereffect img {
-	  display: block;
-	  position: relative;
-	  max-width: none;
-	  margin-left:auto;
-	  margin-right:auto;
-	  margin-top:-20px;
-	  width: calc(50% + 20px);
-	  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	  transition: opacity 0.35s, transform 0.35s;
-	  -webkit-transform: translate3d(-10px,0,0);
-	  transform: translate3d(-10px,0,0);
-	  -webkit-backface-visibility: hidden;
-	  backface-visibility: hidden;
-	}
-	
-	.hovereffect:hover img {
-	  opacity: 0.4;
-	  filter: alpha(opacity=40);
-	  -webkit-transform: translate3d(0,0,0);
-	  transform: translate3d(0,0,0);
-	}	
-	
-	.hovereffect a, .hovereffect p {
-	  color: #000;
-	  opacity: 0;
-	  filter: alpha(opacity=0);
-	  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-	  transition: opacity 0.35s, transform 0.35s;
-	  -webkit-transform: translate3d(100%,0,0);
-	  transform: translate3d(100%,0,0);
-	}
-	
-	.hovereffect:hover a, .hovereffect:hover p {
-	  opacity: 1;
-	  filter: alpha(opacity=100);
-	  -webkit-transform: translate3d(0,0,0);
-	  transform: translate3d(0,0,0);
-	}
-	
-	.hovereffect p { 
-		margin-top: 30px;
-		background-color: orange;
-	}	
-	
-	.pb-home-links-panel p { 
-		margin-top:60px;
-	}
+</style>	
 		
-</style>
-
-<div class="container-fluid bs-docs-container">
+	<div class="pb-homepage">
+		
+		<div class="pb-homepage-container" style="background-color:red">image box</div>
+		
+		<div class="pb-homepage-container">Contents Box</div>
 	
-	<div class="row">
-		<div class="pb-home-links">
-			<div class="pb-home-links-outer-panel">
-				<div class="hovereffect">
-					<img src="/assets/images/svg/icn_developers.svg" alt="Developers!">
-					<div class="overlay">
-						<p>
-							<a href="/developers.html">Developers, dive right in and start coding!</a>
-						</p>
-	            	</div>
-				</div>
-			</div>
-			
-			<div class="pb-home-links-panel">
-				<div class="hovereffect">
-					<img src="/assets/images/svg/icn_getstarted.svg" class="pb-large-img" alt="Get Started!">
-					<div class="overlay">
-						<p>
-							<a href="/prebid/prebidjs.html">Let's Get Started!</a>
-						</p>
-		            </div>
-				</div>
-			</div>
-			
-			<div class="pb-home-links-outer-panel">
-				<div class="hovereffect">
-					<img src="/assets/images/svg/icn_adops.svg" alt="Ad Ops!">
-					<div class="overlay">
-						<p>
-							<a href="/adops/before-you-start.html">Learn how Prebid works seamlessly with Ad Ops!</a>
-						</p>
-		            </div>
-				</div>
-			</div>
-			
-		</div>
 	</div>
-	
-</div>
+		
+		
+
 
 
 
