--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,6 +416,13 @@ button.list-group-item:focus {
 	margin-right: auto;
 	width: 33%;
 	height: 100%;
+	text-align: center;
+}
+
+.pb-home-links-panel img { 
+	display: inline-block;
+	width: 70%;
+	height: 70%;
 }
 
 .pb-home-links-outer-panel { 
@@ -425,125 +432,57 @@ button.list-group-item:focus {
 	margin-right: auto;
 	width: 33%;
 	height: 100%;
+	text-align: center;
 
 }
 
-.hovereffect {
-  width: 100%;
-  height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
+.pb-home-links-outer-panel img { 
+	display: inline-block;
+	width: 60%;
+	height: 60%;
 }
-
-.hovereffect .overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  padding: 50px 20px;
-}
-
-.hovereffect img.pb-large-img {
-  display: block;
-  position: relative;
-  max-width: none;
-  margin-left:auto;
-  margin-right:auto;
-  margin-top:-20px;
-  width: calc(50% + 20px);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-10px,0,0);
-  transform: translate3d(-10px,0,0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-
-.hovereffect img {
-  display: block;
-  position: relative;
-  max-width: none;
-  margin-left:auto;
-  margin-right:auto;
-  margin-top:-20px;
-  width: calc(40% + 20px);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-10px,0,0);
-  transform: translate3d(-10px,0,0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.hovereffect:hover img {
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}	
-
-.hovereffect a, .hovereffect p {
-  color: #000;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(100%,0,0);
-  transform: translate3d(100%,0,0);
-}
-
-.hovereffect:hover a, .hovereffect:hover p {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-.hovereffect p { 
-	margin-top: 30px;
-	background-color: orange;
-	border-radius: 8px;
-}	
 
 .pb-home-links-panel p { 
-	margin-top:60px;
+	margin-top:0px;
 }
 
 .pb-panel-title { 
-	display: inline-block;
+	display: block;
 	font-size:35px;
-	color: #FFFFFF;
-	margin-top: 0px;
+	color: #ffffff;
+	margin-top: 30px;
 }
 
 .pb-center-title { 
 	font-size:35px;
-	color: #FFFFFF;
-	margin-top: -20px;
+	color: #ffffff;
+	margin-top: 20px;
+}
+
+.pb-home-link-container:hover .pb-home-link-visible { 
+	 display: none;
+}
+
+.pb-home-link-container:hover .pb-home-link-hidden { 
+	 display: block;
+}
+
+
+.pb-home-link-hidden { 
+	display:none;
+}
+
+.pb-lg-homelink { 
+	width: 40%;
+	height: 40%;
+}
+
+.pb-md-honelink { 
+	width:30%;
+	height:3	0%;
+}
+
 	
-
-}
-
-/***********Messages*******************/
-
-.pb-messagebox {
-	margin-left:auto;
-	margin-right:auto;
-	margin-top: 30px;
-	padding:20px;
-	width: 65%;
-	font-size:35px;
-	color: #FFFFFF;
-	background-color: #EA9622;
-	opacity:.95
-}
-		
 
 /*===========Benefits===================*/
 
@@ -556,7 +495,7 @@ button.list-group-item:focus {
 	margin-left: auto; 
 	margin-right: auto;
 	opacity:.80;
-	margin-top:240px;
+	margin-top:400px;
 	
 }
 	
@@ -2056,25 +1995,11 @@ div.pl-doc-entry{
 @media all and (min-width: 1600px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.4em;  } }
 @media all and (min-width: 1700px) {  .pb_benefits_title h2, .pb_home_belowfold_carousel h1   { font-size:2.5em;  } }
 
-@media all and (min-width: 50px)   {  .pb-home-links  { height:160px;  } }
-@media all and (min-width: 100px)  {  .pb-home-links  { height:170px;  } }
-@media all and (min-width: 200px)  {  .pb-home-links  { height:180px;  } }
-@media all and (min-width: 300px)  {  .pb-home-links  { height:190px;  } }
-@media all and (min-width: 400px)  {  .pb-home-links  { height:200px;  } }
-@media all and (min-width: 500px)  {  .pb-home-links  { height:210px;  } }
-@media all and (min-width: 600px)  {  .pb-home-links  { height:220px;  } }
-@media all and (min-width: 700px)  {  .pb-home-links  { height:230px;  } }
-@media all and (min-width: 800px)  {  .pb-home-links  { height:240px;  } }
-@media all and (min-width: 900px)  {  .pb-home-links  { height:250px;  } }
-@media all and (min-width: 1000px) {  .pb-home-links  { height:260px;  } }
-@media all and (min-width: 1100px) {  .pb-home-links  { height:270px;  } }
-@media all and (min-width: 1200px) {  .pb-home-links  { height:280px;  } }
-@media all and (min-width: 1300px) {  .pb-home-links  { height:290px;  } }
-@media all and (min-width: 1400px) {  .pb-home-links  { height:300px;  } }
-@media all and (min-width: 1500px) {  .pb-home-links  { height:310px;  } }
-@media all and (min-width: 1500px) {  .pb-home-links  { height:320px;  } }
-@media all and (min-width: 1600px) {  .pb-home-links  { height:330px;  } }
-@media all and (min-width: 1700px) {  .pb-home-links  { height:340px;  } }
+
+
+
+
+
 
 
 	
