turning off jsfiddle if cookies not allowed

--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -214,8 +214,10 @@
 	            <div class="row">
 	
 	                <!-- JSFiddle -->
-	                <div class="col-md-12">
-	                    <iframe width="100%" height="{{page.code_height}}" src="//{{page.jsfiddle_link}}" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+	                <div id="jsfiddle" class="col-md-12">
+			<h2>(Sorry, jsfiddle code examples aren't available with your cookie privacy settings.)</h2>
+			<p><a class="optanon-show-settings">Cookie Settings</a></p><br/>
+
 	                </div>
 	
 	            </div>
@@ -227,4 +229,7 @@
 	</div>
 </div>
 
+<script type="text/javascript">
+Optanon.InsertHtml('<iframe width="100%" height="{{page.code_height}}" src="//{{page.jsfiddle_link}}" allowfullscreen="allowfullscreen" frameborder="0"></iframe>', 'jsfiddle', null, {deleteSelectorContent: true}, 3);
+</script>
 {% include footer.html %}
